# DISCO2-module-template

./: .gitignore  README.md  camera_matrix.txt  distortion_coeffs.txt  meson.build
images/: output0.bayerRG
protos/: metadata.proto
real_images/: output0.bayerRG
src/: dead_pixels.c  demosaic_module.cpp  detection_dead_pixel.c  distortion_correction.cpp  fixing_dead_pixel.c  id.c  jpegxl_module.c  module_template.c  module_template.cpp  resize_module.cpp  test.c  test_demosaic.cpp
src/include/utils/: metadata.pb-c.h
src/module_examples/: demosaic.cpp  id.c  mirror_vertical.c  to_grayscale.c
src/old/: dead_pixels.c
src/utils/: batch_util.c  metadata.pb-c.c  metadata_util.c
